lab_3/source/replicaSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
