lab_3/source/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app: lab3
spec:
  tls:
    - hosts:
        - sillyhost.com
      secretName: mytls
  rules:
    - host: sillyhost.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myservice
                port:
                  number: 3000
